--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             <ul>
                 <li><a href="index.html" class="active">Menú</a></li>
                 <li><a href="cart.html">Carrito <span id="cart-counter"></span></a></li>
+                <li><a href="reviews.html">Comunidad</a></li>
                 <li><a href="orders.html">Pedidos</a></li>
                 <li><a href="profile.html">Perfil</a></li>
             </ul>
