--- a/profile.html
+++ b/profile.html
@@ -17,6 +17,7 @@
                 <li><a href="index.html">Menú</a></li>
                 <li><a href="cart.html">Carrito</a></li>
                 <li><a href="reviews.html">Comunidad</a></li>
+                <li><a href="orders.html">Pedidos</a></li>
                 <li><a href="profile.html" class="active">Perfil</a></li>
             </ul>
         </nav>
