--- a/profile.html
+++ b/profile.html
@@ -12,6 +12,11 @@
         <div class="logo">
             <img src="assets/images/logo.png" alt="Coffee Singularity">
         </div>
+        <div class="menu-toggle" onclick="toggleMenu()">
+            <span></span>
+            <span></span>
+            <span></span>
+        </div>
         <nav>
             <ul>
                 <li><a href="index.html">Menú</a></li>
